--- a/Sumilao.mw
+++ b/Sumilao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bukidnon sumilao.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Sumilao, Bukidnon
 | 1990 = 13494		
@@ -13,7 +14,6 @@
 |}}
 Say '''Sumilao''' et kumapat ya klase baley ed luyag na [[Bukidnon]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 25,668 totoo. Walay kabaleg tan sukat to ya 196.95 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 8701.	
 
-
 ==Saray barangay==
 * Kisolon
 * Culasi
@@ -26,10 +26,14 @@ Say '''Sumilao''' et kumapat ya klase baley ed luyag na [[Bukidnon]], [[Pilipina
 * Poblacion
 * Vista Villa
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bukidnon}}															
+{{Bukidnon}}		
+													
 [[Category:Saray baley na Bukidnon]]
