--- a/Balagtas.mw
+++ b/Balagtas.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan balagtas.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balagtas, Bulacan
 | 1990 = 42658		
@@ -13,7 +14,6 @@
 |}}
 Say '''Balagtas''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 65,440 totoo. Walay kabaleg tan sukat to ya 28.66 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 3016.	
 
-
 ==Saray barangay==
 * Borol 2nd
 * Borol 1st
@@ -25,10 +25,14 @@ Say '''Balagtas''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]
 * Santol
 * Wawa (Poblacion)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}															
+{{Bulacan}}	
+														
 [[Category:Saray baley na Bulacan]]
