--- a/Baliuag.mw
+++ b/Baliuag.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan baliuag.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Baliuag, Bulacan
 | 1990 = 89719		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Baliuag''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 143,565 totoo. Walay kabaleg tan sukat to ya 45.05 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 3006.	
-
 
 ==Saray barangay==
 * Bagong Nayon
@@ -43,10 +43,14 @@ Say '''Baliuag''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]
 * Tilapayong
 * Virgen delas Flores
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}															
+{{Bulacan}}	
+														
 [[Category:Saray baley na Bulacan]]
