--- a/Bocaue.mw
+++ b/Bocaue.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan bocaue.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bocaue, Bulacan
 | 1990 = 67243		
@@ -12,7 +13,6 @@
 | 2030 = 		
 |}}
 Say '''Bocaue''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 106,407 totoo. Walay kabaleg tan sukat to ya 31.87 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 3018.	
-
 
 ==Saray barangay==
 * Antipona
@@ -35,10 +35,14 @@ Say '''Bocaue''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]].
 * Turo
 * Wakas
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}															
+{{Bulacan}}	
+														
 [[Category:Saray baley na Bulacan]]
