--- a/Bustos,_Bulacan.mw
+++ b/Bustos,_Bulacan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan bustos.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Bustos, Bulacan
 | 1990 = 34965		
@@ -13,7 +14,6 @@
 |}}
 Say '''Bustos''' et kumadwa ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 62,415 totoo. Walay kabaleg tan sukat to ya 69.99 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 3007.	
 	
-
 ==Saray barangay==
 * Bonga Mayor
 * Bonga Menor
@@ -30,10 +30,14 @@ Say '''Bustos''' et kumadwa ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]
 * Tanawan
 * Tibagan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
