--- a/Calumpit.mw
+++ b/Calumpit.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan calumpit.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Calumpit, Bulacan
 | 1990 = 59042		
@@ -13,7 +14,6 @@
 |}}
 Say '''Calumpit''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 101,068 totoo. Walay kabaleg tan sukat to ya 56.25 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 3003.	
 	
-
 ==Saray barangay==
 * Balite
 * Balungao
@@ -45,10 +45,14 @@ Say '''Calumpit''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]
 * Sergio Bayan
 * Sucol
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
