--- a/Marilao.mw
+++ b/Marilao.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan marilao.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Marilao, Bulacan
 | 1990 = 56361		
@@ -13,7 +14,6 @@
 |}}
 Say '''Marilao''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 185,624 totoo. Walay kabaleg tan sukat to ya 33.74 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 3019.	
 	
-
 ==Saray barangay==
 * Abangan Arte                                      
 * Abangan Sur
@@ -32,10 +32,14 @@ Say '''Marilao''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]
 * Saog
 * Tabing-ilog
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
