--- a/Norzagaray.mw
+++ b/Norzagaray.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan norzagaray.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Norzagaray, Bulacan
 | 1990 = 33485		
@@ -13,7 +14,6 @@
 |}}
 Say '''Norzagaray''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 103,095 totoo. Walay kabaleg tan sukat to ya 309.77 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 3013.	
 	
-
 ==Saray barangay==
 * Bangkal
 * Baraka
@@ -29,10 +29,14 @@ Say '''Norzagaray''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipina
 * San Lorenzo
 * Friendship Village Resources (FVR)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
