--- a/Pandi.mw
+++ b/Pandi.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan pandi.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Pandi, Bulacan
 | 1990 = 32648		
@@ -13,7 +14,6 @@
 |}}
 Say '''Pandi''' et kumadwa ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 66,650 totoo. Walay kabaleg tan sukat to ya 31.2 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 3014.	
 	
-
 ==Saray barangay==
 * Bagbaguin
 * Bagong Barrio
@@ -38,10 +38,14 @@ Say '''Pandi''' et kumadwa ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]
 * Baka-bakahan
 * Santo Niño
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
