--- a/Plaridel.mw
+++ b/Plaridel.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan plaridel.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Plaridel, Bulacan
 | 1990 = 52954		
@@ -13,7 +14,6 @@
 |}}
 Say '''Plaridel''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 101,441 totoo. Walay kabaleg tan sukat to ya 32.44 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 3004.	
 	
-
 ==Saray barangay==
 * Agnaya
 * Bagong Silang
@@ -35,10 +35,14 @@ Say '''Plaridel''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]
 * Sipat
 * Tabang
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
