--- a/San_Miguel,_Bulacan.mw
+++ b/San_Miguel,_Bulacan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan san miguel.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Miguel, Bulacan
 | 1990 = 91124		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Miguel''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 142,854 totoo. Walay kabaleg tan sukat to ya 231.4 sq. km. Sikato et walad kumatlo ya distrito. Say zip code to et 3011.	
 		
-
 ==Saray barangay==
 * Bagong Silang
 * Balaong
@@ -65,10 +65,14 @@ Say '''San Miguel''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipina
 * Maligaya
 * Tigpalas
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}													
+{{Bulacan}}	
+												
 [[Category:Saray baley na Bulacan]]
