--- a/Santa_Maria,_Bulacan.mw
+++ b/Santa_Maria,_Bulacan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator bulacan santa maria.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Santa Maria, Bulacan
 | 1990 = 91468		
@@ -13,7 +14,6 @@
 |}}
 Say '''Santa Maria''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 218,351 totoo. Walay kabaleg tan sukat to ya 90.92 sq. km. Sikato et walad kumapat ya distrito. Say zip code to et 3020.	
 	
-
 ==Saray barangay==
 * Bagbaguin
 * Balasing
@@ -40,10 +40,14 @@ Say '''Santa Maria''' et unaan ya klase baley ed luyag na [[Bulacan]], [[Pilipin
 * Tabing Bakod (Sto. Tomas)
 * Tumana
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Bulacan}}														
+{{Bulacan}}	
+													
 [[Category:Saray baley na Bulacan]]
