--- a/Malolos.mw
+++ b/Malolos.mw
@@ -1,8 +1,10 @@
-[[File:Ph_locator_bulacan_malolos.png|right|270px]] 							
-									
+{{Infobox location}}
+													
 Say '''Malolos''' et unaan ya klase siyudad ed luyag na [[Bulacan]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 234,945 totoo. <br> 	
 Walay kabaleg tan sukat to ya 67.25 sq. km. Sikato et walad  unaan ya distrito. Say zip code to et 3000. 			
 
+== Saray reperensiya ==
+{{Reflist}}
 
 {{Bulacan}}
 									
