--- a/Basud.mw
+++ b/Basud.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte basud.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Basud, Camarines Norte
 | 1990 = 27295		
@@ -13,7 +14,6 @@
 |}}
 Say '''Basud''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 41017 totoo. Walay kabaleg tan sukat to ya 260.28 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4608.	
 	
-
 ==Saray barangay==
 * Angas
 * Bactas
@@ -45,10 +45,14 @@ Say '''Basud''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [[Pil
 * Tuaca
 * Poblacion 2
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}														
+{{Camarines Norte}}		
+												
 [[Category:Saray baley na Camarines Norte]]
