--- a/Daet.mw
+++ b/Daet.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte daet.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Daet, Camarines Norte
 | 1990 = 66477		
@@ -13,7 +14,6 @@
 |}}
 Say '''Daet''' et unaan ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 104,799 totoo. Walay kabaleg tan sukat to ya 46 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4600.	
 	
-
 ==Saray barangay==
 * Alawihao
 * Awitan
@@ -41,10 +41,14 @@ Say '''Daet''' et unaan ya klase baley ed luyag na [[Camarines Norte]], [[Pilipi
 * Baranggay VIII (Poblacion)
 * San Isidro
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}														
+{{Camarines Norte}}	
+													
 [[Category:Saray baley na Camarines Norte]]
