--- a/Jose_Panganiban.mw
+++ b/Jose_Panganiban.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte jose panganiban.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Jose Panganiban, Camarines Norte
 | 1990 = 44408		
@@ -13,7 +14,6 @@
 |}}
 Say '''Jose Panganiban''' et kumadwa ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2010 Census, say papulasyon to et 55,557 totoo. Walay kabaleg tan sukat to ya 214.44 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4606.	
 		
-
 ==Saray barangay==
 * Bagong Bayan
 * Calero
@@ -43,10 +43,14 @@ Say '''Jose Panganiban''' et kumadwa ya klase baley ed luyag na [[Camarines Nort
 * Santa Rosa Sur
 * Tamisan
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}													
+{{Camarines Norte}}	
+												
 [[Category:Saray baley na Camarines Norte]]
