--- a/Mercedes,_Camarines_Norte.mw
+++ b/Mercedes,_Camarines_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte mercedes.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Mercedes, Camarines Norte
 | 1990 = 34300		
@@ -13,7 +14,6 @@
 |}}
 Say '''Mercedes''' et kumadwa ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 50,841 totoo. Walay kabaleg tan sukat to ya 173.69 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4601.	
 					
-
 ==Saray barangay==
 * Apuao
 * Baranggay I (Poblacion)
@@ -42,10 +42,14 @@ Say '''Mercedes''' et kumadwa ya klase baley ed luyag na [[Camarines Norte]], [[
 * San Roque
 * Tarum
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}										
+{{Camarines Norte}}	
+									
 [[Category:Saray baley na Camarines Norte]]
