--- a/Paracale.mw
+++ b/Paracale.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte paracale.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Paracale, Camarines Norte
 | 1990 = 39192		
@@ -13,7 +14,6 @@
 |}}
 Say '''Paracale''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 59,149 totoo. Walay kabaleg tan sukat to ya 197.9 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4605.	
 		
-
 ==Saray barangay==
 * Awitan
 * Bagumbayan
@@ -43,10 +43,14 @@ Say '''Paracale''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [[
 * Tawig
 * Tugos
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}													
+{{Camarines Norte}}		
+											
 [[Category:Saray baley na Camarines Norte]]
