--- a/San_Lorenzo_Ruiz.mw
+++ b/San_Lorenzo_Ruiz.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte san lorenzo ruiz.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Lorenzo Ruiz, Camarines Norte
 | 1990 = 9286		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Lorenzo Ruiz''' et kumalima ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 14,063 totoo. Walay kabaleg tan sukat to ya 119.37 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4610.	
 		
-
 ==Saray barangay==
 * Daculang Bolo
 * Dagotdotan
@@ -28,10 +28,14 @@ Say '''San Lorenzo Ruiz''' et kumalima ya klase baley ed luyag na [[Camarines No
 * San Isidro
 * San Ramon
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}													
+{{Camarines Norte}}
+													
 [[Category:Saray baley na Camarines Norte]]
