--- a/San_Vicente,_Camarines_Norte.mw
+++ b/San_Vicente,_Camarines_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte san vicente.png|right|270px]]	
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> San Vicente, Camarines Norte
 | 1990 = 7321		
@@ -13,7 +14,6 @@
 |}}
 Say '''San Vicente''' et kumalima ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 10,396 totoo. Walay kabaleg tan sukat to ya 57.49 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4609.	
 			
-
 ==Saray barangay==
 * Asdum
 * Cabanbanan
@@ -25,10 +25,14 @@ Say '''San Vicente''' et kumalima ya klase baley ed luyag na [[Camarines Norte]]
 * Poblacion District II (Kanluran)
 * San Jose (Iraya Norte)
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}												
+{{Camarines Norte}}
+												
 [[Category:Saray baley na Camarines Norte]]
