--- a/Talisay,_Camarines_Norte.mw
+++ b/Talisay,_Camarines_Norte.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte talisay.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Talisay, Camarines Norte
 | 1990 = 16896		
@@ -13,7 +14,6 @@
 |}}
 Say '''Talisay''' et kumapat ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 25,841 totoo. Walay kabaleg tan sukat to ya 30.76 sq. km. Sikato et walad kumadwa ya distrito. Say zip code to et 4602.	
 			
-
 ==Saray barangay==
 * Binanuaan
 * Caawigan
@@ -31,10 +31,14 @@ Say '''Talisay''' et kumapat ya klase baley ed luyag na [[Camarines Norte]], [[P
 * Santa Elena
 * Santo Niño
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}												
+{{Camarines Norte}}	
+											
 [[Category:Saray baley na Camarines Norte]]
