--- a/Vinzons.mw
+++ b/Vinzons.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines norte vinzons.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Vinzons, Camarines Norte
 | 1990 = 31774		
@@ -13,7 +14,6 @@
 |}}
 Say '''Vinzons''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 43,485 totoo. Walay kabaleg tan sukat to ya 141.43 sq. km. Sikato et walad unaan ya distrito. Say zip code to et 4603.	
 			
-
 ==Saray barangay==
 * Aguit-It
 * Banocboc
@@ -35,10 +35,14 @@ Say '''Vinzons''' et kumatlo ya klase baley ed luyag na [[Camarines Norte]], [[P
 * Singi
 * Sula
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Norte}}												
+{{Camarines Norte}}	
+											
 [[Category:Saray baley na Camarines Norte]]
