--- a/Manuel_Roxas.mw
+++ b/Manuel_Roxas.mw
@@ -1,10 +1,7 @@
-: ''Nengneng met so: [[Rojas (panpalinewan)|Rojas]] tan [[Roxas (panpalinewan)]].''
+[[image:Manuel Roxas.jpg|right|thumb|300px|Si Manuel Roxas]]
 
-[[image:Manuel Roxas.jpg|right|thumb|300px|Ken Manuel Acuña Rojas]]
-
-Si '''San Manuel Acuña Rojas''' (e.g. ''Manuel Roxas''; inianak [[January 1|Enero 1]], 1892 ed [[Capiz]]; inatey Abril 15, 1948 ed Clark Air Base dia [[siyudad na Angeles, Filipinas|baley na Angeles]], [[Pampanga]]) sakey politiko tan ikalimang presidente diad Pilipino nen Mayo 28, 1946 hanggang Abril 17, 1948.
-
+Si '''Manuel Acuña Roxas''' (inianak [[Enero 1]], 1892 ed [[Capiz]]; inatey Abril 15, 1948 ed Clark Air Base dia [[siyudad na Angeles, Filipinas|baley na Angeles]], [[Pampanga]]) sakey politiko tan ikalimang presidente diad Pilipino nen Mayo 28, 1946 hanggang Abril 17, 1948.
 
 {{stub}}
 
-[[category:Politika|Rojas, Manuel A.]]
+[[category:Politika|Roxas, Manuel]]
