--- a/Template:Infobox_location%2Fsandbox.mw
+++ b/Template:Infobox_location%2Fsandbox.mw
@@ -20,8 +20,8 @@
 |motto = {{{motto|}}}
 |image_map  = {{{image_map|{{#invoke:wd|property|raw|best|{{{qid|}}}|P242}} }}} 
 |mapsize = {{{mapsize|280px}}} 
-|map_alt = {{{map_alt|Lokasiyon na {{#invoke:wd|label|{{{qid|}}}}}}}} 
-|map_caption  = {{{map_caption|Lokasiyon na {{#invoke:wd|label|{{{qid|}}}}}}}} 
+|map_alt = {{{map_alt|Lokasyon na {{#invoke:wd|label|{{{qid|}}}}}}}} 
+|map_caption  = {{{map_caption|Lokasyon na {{#invoke:wd|label|{{{qid|}}}}}}}} 
 |pushpin_map = {{{pushpin_map|}}}
 |pushpin_label_position  = {{{pushpin_label_position|}}}
 |pushpin_label = {{{pushpin_label|}}}
@@ -41,7 +41,7 @@
   "type": "Feature",
   "geometry": { "type": "Point", "coordinates": [{{#invoke:WikidataIB |getValue |maxvals =1 |P625 |fwd=ALL |osd=no |qid={{{qid|}}} |noicon=true |show=longlat}}] },
   "properties": {
-    "title": "Lokasiyon na {{#invoke:wd|label|{{{qid|}}}}}",
+    "title": "Lokasyon na {{#invoke:wd|label|{{{qid|}}}}}",
     "marker-color": "0050d0",
     "marker-symbol": "circle-stroked"
     }
@@ -69,7 +69,7 @@
   "type": "Feature",
   "geometry": { "type": "Point", "coordinates": [{{#invoke:WikidataIB |getValue |maxvals =1 |P625 |fwd=ALL |osd=no |qid={{{qid|}}} |noicon=true |show=longlat}}] },
   "properties": {
-    "title": "Lokasiyon na {{#invoke:wd|label|{{{qid|}}}}}",
+    "title": "Lokasyon na {{#invoke:wd|label|{{{qid|}}}}}",
     "marker-color": "0050d0",
     "marker-symbol": "circle-stroked"
     }
@@ -81,13 +81,13 @@
 |lang = {{{lang|}}}
 }} }} |}} }}}
 |coordinates_footnotes = {{{coordinates_footnotes|{{#ifeq:{{{dateformat}}}|dmy|{{#invoke:wd|references|current|{{{qid|}}}|P625}}|{{#invoke:wd|references|mdy|current|{{{qid|}}}|P625}} }} }}}
-|subdivision_type = {{{subdivision_type|Bansa}}}
+|subdivision_type = {{{subdivision_type|Dalin}}}
 |subdivision_name = {{{subdivision_name|{{#invoke:wd|property|linked|{{{qid|}}}|P17}}}}}
-|established_title  = {{{established_title|{{#if:{{main other|{{#property:P571}}|{{#property:P571|from={{{qid|}}}}}}}|Founded|}}}}}
+|established_title  = {{{established_title|{{#if:{{main other|{{#property:P571}}|{{#property:P571|from={{{qid|}}}}}}}|Angipaletnegan|}}}}}
 |established_date = {{{established_date|{{#ifeq:{{{dateformat}}}|dmy|{{PAGENAMEBASE|{{#invoke:wd|property|{{{qid|}}}|P571}}}}|{{PAGENAMEBASE|{{#invoke:wd|property|mdy|{{{qid|}}}|P571}}}} }} }}}
 |seat_type = {{{seat_type|{{#if:{{main other|{{#property:P36}}|{{#property:P36|from={{{qid|}}}}}}}|Kabesera|}}}}}
 |seat = {{{seat|{{#if:{{#invoke:wd|property|linked|{{{qid|}}}|P36}}|{{#invoke:wd|property|linked|{{{qid|}}}|P36}}|{{main other|{{#property:P36}}|{{#property:P36|from={{{qid|}}}}}}}}}}}}
-|leader_title = {{{leader_title|{{#if:{{main other|{{#property:P6}}|{{#property:P6|from={{{qid|}}}}}}}|{{#if:{{#invoke:String2|label|{{#invoke:wd|property|linked|{{{qid|}}}|P1313}}}}|{{#invoke:String2|label|{{#invoke:wd|property|linked|{{{qid|}}}|P1313}}}}|Pangolo}}}}}}}
+|leader_title = {{{leader_title|{{#if:{{main other|{{#property:P6}}|{{#property:P6|from={{{qid|}}}}}}}|{{#if:{{#invoke:String2|label|{{#invoke:wd|property|linked|{{{qid|}}}|P1313}}}}|{{#invoke:String2|label|{{#invoke:wd|property|linked|{{{qid|}}}|P1313}}}}|Pangulo}}}}}}}
 |leader_name = {{{leader_name|{{#if:{{main other|{{#property:P6}}|{{#property:P6|from={{{qid|}}}}}}}|{{#if:{{#invoke:wd|property|linked|{{{qid|}}}|P6}}|{{#invoke:wd|property|linked|{{{qid|}}}|P6}}|{{main other|{{#property:P6}}|{{#property:P6|from={{{qid|}}}}}}}}}}}}}}
 |area_footnotes = {{{area_footnotes|{{#ifeq:{{{dateformat}}}|dmy|{{#invoke:wd|references|current|{{{qid|}}}|P2046}}|{{#invoke:wd|references|mdy|current|{{{qid|}}}|P2046}} }} }}}
 |area_total_km2  = {{{area_total_km2|{{#if:{{main other|{{#property:P2046}}|{{#property:P2046|from={{{qid|}}}}}}}|{{#ifeq:{{#invoke:Wikidata|getUnits|qid={{{qid|}}}|P2046|FETCH_WIKIDATA}}|square meter|{{rnd|{{convert|input={{#invoke:String|replace|{{#invoke:String|replace|{{#invoke:wd|property|{{{qid|}}}|P2046}}| %D+||plain=false}}|±[%d%.][%d%.]*||plain=false}} m2|km2|disp=output number only|comma=off}}|2}}|{{#ifeq:{{#invoke:Wikidata|getUnits|qid={{{qid|}}}|P2046|FETCH_WIKIDATA}}|square kilometer|{{rnd|{{convert|input={{#invoke:String|replace|{{#invoke:String|replace|{{#invoke:wd|property|{{{qid|}}}|P2046}}| %D+||plain=false}}|±[%d%.][%d%.]*||plain=false}} km2|km2|disp=output number only|comma=off}}|2}}|{{#invoke:String|replace|{{#invoke:String|replace|{{#invoke:wd|property|{{{qid|}}}|P2046}}| %D+||plain=false}}|±[%d%.][%d%.]*||plain=false}} }} }} }} }}}
@@ -97,7 +97,7 @@
 |population_total = {{{population_total|{{#invoke:wd|property|current|{{{qid|}}}|P1082}} }}}
 |population_density_km2 = {{{population_density_km2|auto}}}
 |timezone   = {{{timezone|{{#invoke:wd|properties|linked|{{{qid|}}}|P421}}}}}
-|postal_code_type = {{{postal_code_type|Postal&nbsp;code}}}
+|postal_code_type = {{{postal_code_type|Kodigo&nbsp;na&nbsp;postal}}}
 |postal_code = {{{postal_code|{{#invoke:wd|properties|raw|{{{qid|}}}|P281}}}}}
 |area_code = {{{area_code|{{#invoke:wd|properties|raw|{{{qid|}}}|P473}}}}}
 |website = {{{website|{{#if:{{main other|{{#property:P856}}|{{#property:P856|from={{{qid|}}}}}}}|{{URL|{{#invoke:wd|property|raw|best|{{{qid|}}}|P856}}}}|}}}}}
