--- a/Balatan.mw
+++ b/Balatan.mw
@@ -1,4 +1,5 @@
-[[File:Ph locator camarines sur balatan.png|right|270px]]
+{{Infobox location}}
+
 {{Philippine Census			
 | title = Sensus na populasyon ed <br> Balatan, Camarines Sur
 | 1990 = 19324		
@@ -13,7 +14,6 @@
 |}}
 Say '''Balatan''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pilipinas]]. Unong ed 2015 Census, say papulasyon to et 30,922 totoo. Walay kabaleg tan sukat to ya 93.09 sq. km. Sikato et walad kumalima ya distrito. Say zip code to et 4436.	
 	
-
 ==Saray barangay==
 * Cabanbanan
 * Cabungan
@@ -33,10 +33,14 @@ Say '''Balatan''' et kumapat ya klase baley ed luyag na [[Camarines Sur]], [[Pil
 * Tapayas
 * Tomatarayo
 
+== Saray reperensiya ==
+{{Reflist}}
+
 ==Saray gawing ed labas==
 *[http://www.nscb.gov.ph/activestats/psgc/default.asp Philippine Standard Geographic Code]
 *[http://www.census.gov.ph/ Philippine Census Information]
 *[http://www.blgs.gov.ph/lgpmsv2/cmshome/index.php?pageID=23&frmIdDcfCode=7&fLguType=CM&frmIdRegion=2&frmIdProvince=21&frmIdLgu=298 Local Governance Performance Management System]
 
-{{Camarines Sur}}														
+{{Camarines Sur}}	
+													
 [[Category:Saray baley na Camarines Sur]]
